--- a/WPF_Grid_C-/App.xaml
+++ b/WPF_Grid_C-/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WPF_Gri_C_.App"
+﻿<Application x:Class="WPF_Grid_C_.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF_Gri_C_"
