--- a/WPF_Grid_C-/MainWindow.xaml
+++ b/WPF_Grid_C-/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WPF_Gri_C_.MainWindow"
+﻿<Window x:Class="WPF_Grid_C_.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF_Gri_C_"
+        xmlns:local="clr-namespace:WPF_Grid_C_"
         mc:Ignorable="d"
-        Title="Grid Example" Height="450" Width="800" AllowsTransparency="True" BorderThickness="0" WindowStyle="None">
+        Title="Grid Example - Tic Tac Toe Game" Height="450" Width="800" AllowsTransparency="True" BorderThickness="0" WindowStyle="None">
     <Window.Background>
         <SolidColorBrush Color="LightSeaGreen" Opacity="0.20"/>
     </Window.Background>
