--- a/WPF_Grid_C-/MainWindow.xaml
+++ b/WPF_Grid_C-/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Grid Example - Tic Tac Toe Game" Height="450" Width="800" AllowsTransparency="True" BorderThickness="0" WindowStyle="None">
     <Window.Background>
-        <SolidColorBrush Color="LightSeaGreen" Opacity="0.20"/>
+        <SolidColorBrush Color="Transparent" Opacity="0"/>
     </Window.Background>
 
     <Grid>
@@ -36,9 +36,10 @@
         <Button x:Name="button22" Grid.Column="2" Grid.Row="2" BorderBrush="DarkGreen" Background="PaleGreen" BorderThickness="1" Click="Button_Click" FontSize="32" FontStyle="Italic" FontWeight="Bold"></Button>
 
         
-        <WrapPanel Grid.Row="3" Grid.ColumnSpan="3" Background="White">
+        <WrapPanel Grid.Row="3" Grid.ColumnSpan="2" Background="White">
             <TextBlock Margin="50,0,0,0" FontSize="24" Text="Next Turn: "/>
             <TextBlock x:Name="infoBox" FontSize="24" Text="X" />
         </WrapPanel>
+        <Button Grid.Row="3" Grid.Column="2" Background="OrangeRed" Foreground="White" FontWeight="SemiBold" FontStyle="Italic" Width="120" Height="30" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontSize="18" Click="Exit">Click to Exit</Button>
     </Grid>
 </Window>
